[project]
name = "reflex-fastapi-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "broadcaster>=0.3.1",
    "fastapi[standard]>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "reflex>=0.8.2",
    "sqlmodel>=0.0.24",
    "visidata>=3.2",
    "websockets>=15.0.1",
]
